# 20-eyes

./: .gitignore  README.md  alarm.icns  pyproject.toml
chilly_eye/: converter.py  main.py
